# axum-sqlserver-template

./: README.md  TODO.md  compose.yml  justfile
.cargo/: config.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/pwd/: mod.rs
crates/libs/lib-rpc/src/: error.rs
crates/libs/lib-rpc/src/rpcs/: task_rpc.rs
crates/libs/lib-sqlserver/: Cargo.toml
crates/libs/lib-sqlserver/lib-sqlserver-derive/: Cargo.toml
crates/libs/lib-sqlserver/lib-sqlserver-derive/src/: lib.rs
crates/libs/lib-sqlserver/src/: config.rs  convert.rs  lib.rs
crates/libs/lib-sqlserver/src/ctx/: mod.rs
crates/libs/lib-sqlserver/src/model/: conditions.rs  error.rs  mod.rs
crates/libs/lib-sqlserver/src/model/store/: mod.rs
crates/libs/lib-sqlserver/src/model/task/: bmc.rs  mod.rs
crates/libs/lib-sqlserver/src/model/user_info/: bmc.rs  mod.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: pwd.rs  sqlserver.rs
crates/services/web-server/src/: error.rs  main.rs
requests/: login.http  register.http  session.http  task.http
sql/: 01-select-userinfo.sql  201-create_task.sql  202-select_task.sql
sql/query/: create_userinfo.sql  select_userinfo.sql  update_userinfo.sql
sql/start/10_table/: 102_20240214_create_task_table.sql  1_20240209_create_userinfo_table.sql  2_20240209_create_task_table.sql
sql/start/20_stored_procedure/: 0_20240217_sp_GetErrorInfo.sql
sql/start/20_stored_procedure/userinfo_table/: 20240210_sp_userinfo_create.sql  20240214_sp_userinfo_create.sql  20240214_sp_userinfo_delete.sql  20240214_sp_userinfo_get.sql
(+9 files in other folders)
